...
                    onClick = {
                      imagePicker.launch(
                          PickVisualMediaRequest(ActivityResultContracts.PickVisualMedia.ImageOnly))
                    })
                .size(size)
                .background(MaterialTheme.colorScheme.background)
                .testTag("profilePicture")) {
          // Display the profile picture if the URL is not null
          AsyncImage(
              model =
                  when (pictureChangeState) {
                    UNCHANGED -> url
                    TO_UPLOAD -> localBitmap
...
